--- a/flexbox/5-index.html
+++ b/flexbox/5-index.html
@@ -13,7 +13,8 @@
 <!– Header –>
 <header class="header" data-section-theme="dark">
 <div class="container">
-    <div class="header-logo" class="wrap">
+    <div class="header-container">
+        <div class="header-logo">
     <a href="#">
         <img src="images/logo-white.png" alt="Techium logo" width="160" height="40">
     </a>
@@ -333,7 +334,7 @@
             <a href="#" class="footer-nav-link">Cookie Policy</a>
             </li>
         </ul>
-        </div>5-styles.css
+        </div>
     </div>
     </div>
 </footer>
