--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -31,7 +31,8 @@
     </div>
 </header>
 <h1>Homepage</h1>
-<div class="section">
+<main>
+<section class="section">
     <div class="container">
     <div class="row">
         <div class="col-6">
@@ -42,8 +43,8 @@
         <div class="col-6"><img class="img-fluid" src="hero-img.png" alt=""></div>
     </div>
     </div>
-</div>
-<div class="section">
+</section>
+<section class="section">
     <div class="container">
     <div class="row">
         <div class="col-6"><img class="img-fluid" src="about-img.png" alt="About image"></div>
@@ -54,8 +55,8 @@
         </div>
     </div>
     </div>
-</div>
-<div class="section">
+</section>
+<section class="section">
     <div class="container">
     <div class="row">
         <div class="col-7">
@@ -80,8 +81,9 @@
         </div>
     </div>
     </div>
-</div>
-<div class="section">
+</section>
+<section class="section">
+    <h1></h1>
     <div class="container">
     <div class="row">
         <div class="col-lg-3">
@@ -94,8 +96,8 @@
         </div>
     </div>
     </div>
-</div>
-<div class="section">
+</section>
+<section class="section">
     <div class="container">
     <div class="row">
         <div class="menu-content">
@@ -118,8 +120,8 @@
         </div>
     </div>
     </div>
-</div>
-<div class="section">
+</section>
+<section class="section">
     <div class="container">
     <div class="row">
         <div class="col-8">
@@ -145,8 +147,9 @@
         </div>
     </div>
     </div>
-</div>
-<div class="footer">
+</section>
+</main>
+<footer class="footer">
     <div class="container">
     <div class="row">
         <div class="col-5">
@@ -176,6 +179,6 @@
         </div>
     </div>
     </div>
-</div>
+</footer>
 </body>
 </html>
