--- a/accessibility/fix-a11y/09-index.html
+++ b/accessibility/fix-a11y/09-index.html
@@ -82,8 +82,7 @@
     </div>
     </div>
 </section>
-<section class="section">
-    <h1></h1>
+<div class="section">
     <div class="container">
     <div class="row">
         <div class="col-lg-3">
@@ -96,7 +95,7 @@
         </div>
     </div>
     </div>
-</section>
+</div>
 <section class="section">
     <div class="container">
     <div class="row">
